--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "theodinproject",
   "version": "1.0.0",
   "description": "Following along with The Odin Project to improve dev skills.",
-  "main": "index.js",
+  "main": "js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass -watch scss -o css"
